--- a/index.html
+++ b/index.html
@@ -391,7 +391,6 @@
                 resBox.style.display = 'block';
             });
         }
-    </script>
     // ==========================================
 // قسم الرفع المباشر لصور شبابيك (ImgBB)
 // ==========================================
@@ -463,6 +462,7 @@ async function publishProd() {
     } catch (error) {
         alert("فشل رفع صورة المنتج");
     }
-}
+}  </script>
+  
 </body>
 </html>
