--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
         <div id="doctorPage" class="page">
             <div style="padding: 40px 5%; max-width: 800px; margin: auto;">
-                <h2 style="text-align:center; font-weight:900; margin-bottom:30px;">دكتور ديكور 🩺</h2>
+                <h2 style="text-align:center; font-weight:900; margin-bottom:30px;">دكتور ديكور </h2>
                 <div id="docSectionsNav" style="display:grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap:15px; margin-bottom:30px;"></div>
             </div>
         </div>
