--- a/index.html
+++ b/index.html
@@ -85,6 +85,21 @@
         .auto-video, .vid-frame-wide iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; }
         
         #searchRes { position: absolute; top: 110px; left: 5%; width: 90%; background: white; z-index: 5000; box-shadow: 0 10px 30px rgba(0,0,0,0.1); border-radius: 20px; padding: 15px; display: none; }
+  /* حل مشكلة التمرير وتنسيق الصور في المتصفح */
+.admin-table {
+    width: 100%;
+    table-layout: fixed; /* يمنع التمدد الجانبي */
+}
+.admin-table img {
+    width: 60px !important; 
+    height: 60px !important;
+    object-fit: cover;
+    border-radius: 8px;
+}
+.admin-table td {
+    word-wrap: break-word;
+    font-size: 0.8rem;
+}
     </style>
 </head>
 <body>
