--- a/index.html
+++ b/index.html
@@ -131,6 +131,36 @@
     cursor: pointer;
     box-shadow: 0 5px 15px rgba(0,0,0,0.1);
 }
+   /* تنسيق الشبكة للمتصفح (4 أعمدة ثابتة) */
+#categoriesList {
+    display: grid !important; /* تفعيل نظام الشبكة إجبارياً */
+    grid-template-columns: repeat(4, 1fr); /* 4 أعمدة متساوية */
+    gap: 20px;
+    padding: 20px 5%;
+}
+
+/* تنسيق التمرير للهاتف فقط */
+@media (max-width: 768px) {
+    #categoriesList {
+        display: flex !important; /* العودة لنظام الصف في الهاتف */
+        overflow-x: auto;
+        gap: 15px;
+        padding: 20px;
+        scrollbar-width: none;
+    }
+    #categoriesList div {
+        flex: 0 0 250px; /* الحفاظ على عرض القسم في الهاتف ومنع انضغاطه */
+    }
+}
+
+/* تنسيق شكل الكارت ليكون متناسقاً */
+.cat-card-new {
+    position: relative;
+    height: 350px;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+}
     </style>
 </head>
 <body>
